--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
+@import url('./styles/globals.css');
+
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
-
-@import url('../styles/globals.css'); 
+@tailwind utilities; 
